# void

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .tool-versions  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  LICENSE_DEV.md  Makefile  README.md  azure-pipelines.yml  compile_flags.txt  setup.bat  setup.command  setup.sh  void.code-workspace
.devcontainer/: devcontainer.json
.devcontainer/images/: Dockerfile
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: build.yml  code-format.yml  dry-run.yml  infer.yml  lint.yml
docs/: .gitignore  Doxyfile
docs/generator/: style.css
examples/: CMakeLists.txt
examples/demo/: main.cpp
include/: helloworld.h
include/void/: common.h
sandbox/: CMakeLists.txt
sandbox/demo/: main.cpp
src/: CMakeLists.txt  helloworld.cpp
